See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 11.06.00

              pamcut: add -reportonly.

              infotopam: Add input validation.

              infotopam: Remove input file name from messages.  Add -verbose
              and issue informational message only if it is specified.

              pamcut: fix incorrect output when rectangle to cut is entirely
              above the input image.  Invisible junk after image.  Always
              broken.  (The ability to cut outside the input image was new in
              pamcut's predecessor pnmcut in Netpbm 9.7 (August 2000).

              pamcut: fix incorrect output with PBM input when rectangle to
              cut is entirely below the input image.  Invisible junk after
              image.  Broken in Netpbm 10.44 (September 2008).

              ppmtowinicon: fix array overrun with 4 and 8 bits per pixel.
              Broken in Netpbm 11.05 (December 2023).

              infotopam: fix incorrect output -- columns always in wrong
              place.  Always broken.  (infotopam was new in Netpbm 10.22 (May
              2004)).

              pamseq: fix typo in error message.

              build: makeman: fix warning about backslashes in strings.

23.12.28 BJH  Release 11.05.00

              pnmpad: Add -color, -promote, -extend-edge, -detect-background .

              pnmconvol: Restore ability of convolution matrix to be a
              pseudo-plain-PNM with samples that exceed the maxval.  Lost in
              10.30 (October 2005) because maxval-checking code was added to
              libnetpbm.  (Was fixed in 10.47.08 in November 2010, but only in
              the 10.47 series).

              pnmindex: Improve failure mode when -size or -across is zero.

              pnmindex: Make -plain work.

              pnmpad: fix behavior with -left, -right, and -width together or