@@ -13,6 +13,9 @@ not yet  BJH  Release 11.06.00
               infotopam: Remove input file name from messages.  Add -verbose
               and issue informational message only if it is specified.
 
+              libnetpbm: Don't ignore garbage at the end of a color specifier
+              (e.g. rgbi:0/.5/1xyz).
+
               pamcut: fix incorrect output when rectangle to cut is entirely
               above the input image.  Invisible junk after image.  Always
               broken.  (The ability to cut outside the input image was new in
